--- a/shaderpacks/complementary-unbound.pw.toml
+++ b/shaderpacks/complementary-unbound.pw.toml
@@ -4,6 +4,8 @@ side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/R6NEzAwj/versions/MCqlWur4/ComplementaryUnbound_r5.1.1.zip"
+hash-format = "sha1"
+hash = "65c7ef20fef4b5b03aa44afccbfdfdd82574c193"
 
 [update]
 [update.modrinth]
