--- a/mods/core/supplementaries/supplementaries-squared.pw.toml
+++ b/mods/core/supplementaries/supplementaries-squared.pw.toml
@@ -1,13 +1,13 @@
 name = "Supplementaries Squared"
-filename = "suppsquared-1.20-1.1.13-fabric.jar"
+filename = "suppsquared-1.20-1.1.14-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/dCCkNFwE/versions/xHo37Yip/suppsquared-1.20-1.1.13-fabric.jar"
+url = "https://cdn.modrinth.com/data/dCCkNFwE/versions/ydzs0dIh/suppsquared-1.20-1.1.14-fabric.jar"
 hash-format = "sha1"
-hash = "e53991f9fe5fe495380d824d5cece1d36df32a48"
+hash = "32c159ab7fb6ad061cb04e9c656871722d63159e"
 
 [update]
 [update.modrinth]
 mod-id = "dCCkNFwE"
-version = "xHo37Yip"
+version = "ydzs0dIh"
