--- a/index.toml
+++ b/index.toml
@@ -192,11 +192,51 @@ file = "mods/core/xaero/xaeros-world-map.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/coroutil.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/cupboard.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/fabric-api.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/forge-config-api-port.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/fusion-connected-textures.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/geckolib.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/iceberg.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/konkrete.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/melody.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/moonlight.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/puzzles-lib.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/searchables.pw.toml"
 metafile = true
 
 [[files]]
