--- a/index.toml
+++ b/index.toml
@@ -46,6 +46,10 @@ file = "mods/content/decoration/windchimes.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/endrem.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/mobs/creeper-overhaul.pw.toml"
 metafile = true
 
@@ -354,6 +358,10 @@ file = "mods/tweaks/audio/sound-physics-remastered.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/audio/sound.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/building/diagonal-fences.pw.toml"
 metafile = true
 
@@ -542,6 +550,10 @@ file = "mods/tweaks/inventory/distinguished-potions.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/inventory/idwtialsimmoedm.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/inventory/mindful-darkness.pw.toml"
 metafile = true
 
@@ -702,6 +714,14 @@ file = "mods/worldgen/better-village-fabric.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/worldgen/betterend.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/worldgen/betternether.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/worldgen/ctov/ct-overhaul-village.pw.toml"
 metafile = true
 
@@ -718,11 +738,23 @@ file = "mods/worldgen/expanded-ecosphere.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/worldgen/moogs/mes-moogs-end-structures.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/worldgen/moogs/mns-moogs-nether-structures.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/worldgen/moogs/moogs-voyager-structures.pw.toml"
 metafile = true
 
 [[files]]
 file = "mods/worldgen/yungs/yungs-better-desert-temples.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/worldgen/yungs/yungs-better-end-island.pw.toml"
 metafile = true
 
 [[files]]
