--- a/index.toml
+++ b/index.toml
@@ -7,6 +7,10 @@ file = "config/craftpresence.json"
 file = "config/paxi/datapack_load_order.json"
 
 [[files]]
+file = "config/paxi/datapacks/better-villages-bountiful.pw.toml"
+metafile = true
+
+[[files]]
 file = "config/paxi/resourcepack_load_order.json"
 
 [[files]]
@@ -15,6 +19,10 @@ metafile = true
 
 [[files]]
 file = "config/paxi/resourcepacks/creeper-overhaul-overhaul.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/bountiful.pw.toml"
 metafile = true
 
 [[files]]
