--- a/mods/libraries/moonlight.pw.toml
+++ b/mods/libraries/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.10.4-fabric.jar"
+filename = "moonlight-1.20-2.10.5-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/zYK4kSID/moonlight-1.20-2.10.4-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/OS1Spie4/moonlight-1.20-2.10.5-fabric.jar"
 hash-format = "sha1"
-hash = "32fe8aa226cbed183075f406ab1d1be37dd802b2"
+hash = "c7a6fedf7d428f7292ba8221f6ac9b9da40cc506"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "zYK4kSID"
+version = "OS1Spie4"
