--- a/mods/libraries/creativecore.pw.toml
+++ b/mods/libraries/creativecore.pw.toml
@@ -1,13 +1,13 @@
 name = "CreativeCore"
-filename = "CreativeCore_FABRIC_v2.11.16_mc1.20.1.jar"
+filename = "CreativeCore_FABRIC_v2.11.24_mc1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/OsZiaDHq/versions/qohSXqHo/CreativeCore_FABRIC_v2.11.16_mc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/OsZiaDHq/versions/8nboCMSH/CreativeCore_FABRIC_v2.11.24_mc1.20.1.jar"
 hash-format = "sha1"
-hash = "14776973f7616213fe7a64707ef3b56e7b0fb4f8"
+hash = "e891b1e63f16e26a1a89619c64afe3744da7f7aa"
 
 [update]
 [update.modrinth]
 mod-id = "OsZiaDHq"
-version = "qohSXqHo"
+version = "8nboCMSH"
