--- a/index.toml
+++ b/index.toml
@@ -1,6 +1,12 @@
 hash-format = "sha256"
 
 [[files]]
+file = "config/bclib/client.json"
+
+[[files]]
+file = "config/bclib/server.json"
+
+[[files]]
 file = "config/builtinservers.json"
 
 [[files]]
