--- a/index.toml
+++ b/index.toml
@@ -567,6 +567,10 @@ file = "mods/testing-prev/libraries/dawn.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/testing-prev/libraries/owo-lib.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/testing-prev/libraries/trinkets.pw.toml"
 metafile = true
 
