Added a more updated dep + updated 2 mods

--- a/index.toml
+++ b/index.toml
@@ -305,6 +305,10 @@ file = "mods/libraries/bclib.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/cardinal-components-api.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/cloth-config.pw.toml"
 metafile = true
 
