--- a/mods/testing-prev/cc/plethora-peripherals.pw.toml
+++ b/mods/testing-prev/cc/plethora-peripherals.pw.toml
@@ -1,13 +1,13 @@
 name = "Plethora Peripherals"
-filename = "Plethora-Fabric-1.9.4.jar"
+filename = "Plethora-Fabric-1.9.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/5pxGGDeh/Plethora-Fabric-1.9.4.jar"
+url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/PYoFhPiP/Plethora-Fabric-1.9.5.jar"
 hash-format = "sha1"
-hash = "f74a2ffac847c3e4d1e78f1ab719b337c4f9f873"
+hash = "f7da09b46d925de0057447f3673bfa055439241d"
 
 [update]
 [update.modrinth]
 mod-id = "LDfFdCXe"
-version = "5pxGGDeh"
+version = "PYoFhPiP"
