ncr disable buttons

--- a/index.toml
+++ b/index.toml
@@ -1,6 +1,9 @@
 hash-format = "sha256"
 
 [[files]]
+file = "config/NoChatReports/NCR-Client.json"
+
+[[files]]
 file = "config/bclib/client.json"
 
 [[files]]
